<package>
  <name>d435_millibar_r85_mount_structure</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for d435_millibar_r85_mount_structure</p>
    <p>This package contains configuration data, 3D models and launch files
for d435_millibar_r85_mount_structure robot</p>
  </description>
  <author>Brian Flynn</author>
  <maintainer email="brian_flynn@uml.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
